--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<div class="display-table-cell">
 						<div class="main-content">
 							<h1 class="title"><b>Under Construction</b></h1>
-							<p>Our website is currently undergoing construction. We Should be online shortly
+							<p>Our website is currently undergoing construction. We should be Online shortly
 								Thank you for your patience.</p>
 
 							<!-- <div class="email-input-area">
