Fix cover images

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 
 
 						<div id="rounded-countdown">
+							<p style="color: white;
+							font-weight: 600;
+							font-size: x-large;">Time to product launch</p>
 							<div class="countdown"></div>
 						</div>
 
